# mysql-binlogdumper-rs

./: .gitignore  Cargo.toml  README.md
binlogdumper/: .gitignore  Cargo.toml
binlogdumper/src/: dump_binlogs.rs  event_persistence.rs  main.rs  runtime_db_utils.rs  schema_update.rs  sql_queries.rs
binlogdumper/src/pymod/: dump_binlogs.rs  event_persistence.rs  mod.rs  schema_update.rs  sql_queries.rs
src/: binlog_client.rs  binlog_parser.rs
src/column/json/: json_string_formatter.rs
src/command/: authenticator.rs
src/event/: delete_rows_event.rs  dml_event.rs  event_data.rs  event_type.rs  mod.rs  query_event.rs  row_event.rs  transaction_payload_event.rs  update_rows_event.rs  write_rows_event.rs
src/network/: error_packet.rs  packet_channel.rs
