[workspace]
members = [".", "./binlogdumper"]

[package]
name = "mysql-binlogdumper-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
num_enum = "0.7.3"
chrono = "0.4.19"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.87", features = ["preserve_order"] }
sha1 = "0.10.0"
sha2 = "0.10.6"
zstd = "0.13.2"
async-std = "1.12.0"
url = "2.3.1"
percent-encoding = "2.3.1"
async-recursion = "1.0.2"
lazy_static = "1.4.0"
thiserror = "2.0.11"
mysql_common = "0.34.1"
base64 = "0.22.1"
