[package]
name = "binlogdumper"
version = "0.1.0"
edition = "2021"

[dependencies]
mysql-binlogdumper-rs = { path = "../" }
serde_json = "1.0"
mysql_async = "0.35.1"
duckdb = { version = "=1.1.1", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }


[dependencies.serde]
version = "1.0"
features = ["derive"]
